--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "symfony/mailgun-mailer",
+    "name": "happly/symfony-mailgun-mailer",
     "type": "symfony-mailer-bridge",
     "description": "Symfony Mailgun Mailer Bridge",
     "keywords": [],
